--- a/app/views/portfolio/_top.html.erb
+++ b/app/views/portfolio/_top.html.erb
@@ -1,2 +1,44 @@
 <h1>Portfolio#top</h1>
 <p>Find me in app/views/portfolio/top.html.erb</p>
+
+<i class = "material-icons">menu</i>
+
+ <div class="card-panel teal lighten-2">This is a card panel with a teal lighten-2 class</div>
+
+<frameset rows="100,150,*">
+  <div class="collection">
+    <a href="#!" class="collection-item">Alan<span class="badge">1</span></a>
+    <a href="#!" class="collection-item">Alan<span class="new badge">4</span></a>
+    <a href="#!" class="collection-item">Alan</a>
+    <a href="#!" class="collection-item">Alan<span class="badge">14</span></a>
+  </div>
+  
+    <div class="card-panel">
+      <span class="blue-text text-darken-2">This is a card panel with dark blue text</span>
+    </div>
+    
+<div class="fixed-action-btn horizontal click-to-toggle">
+    <a class="btn-floating btn-large red">
+      <i class="material-icons">menu</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    </ul>
+  </div>
+        
+        
+<%= form_tag( { action: :mail }, { remote: true } ) do %>
+    <a class="waves-effect waves-light btn">
+        <%= submit_tag :mail %>
+    </a>
+<% end %>
+
+      <div class="collection">
+        <a href="#!" class="collection-item">Alvin</a>
+        <a href="#!" class="collection-item active">Alvin</a>
+        <a href="#!" class="collection-item">Alvin</a>
+        <a href="#!" class="collection-item">Alvin</a>
+      </div>
