--- a/app/views/portfolio/_sample.slim
+++ b/app/views/portfolio/_sample.slim
@@ -1,38 +1,20 @@
-h1
-  | Portfolio#sample
+.card-panel
+  h1
+    | Portfolio#sample
+  p
+    | Find me in app/views/portfolio/_sample.slim
+
+
+.card-panel.teal.lighten-2
+  h5 サンプルですよ
+
+a.waves-effect.waves-light.btn
+  | haro.js
 p
-  | Find me in app/views/portfolio/_sample.slim
-ul#slide-out.side-nav
-  li
-    .user-view
-      .background
-        img[src="images/office.jpg"]
-      a[href="#!user"]
-        img.circle[src="images/yuna.jpg"]
-      a[href="#!name"]
-        span.white-text.name
-          | John Doe
-      a[href="#!email"]
-        span.white-text.email
-          | jdandturk@gmail.com
-  li
-    a[href="#!"]
-      i.material-icons
-        | cloud
-      | First Link With Icon
-  li
-    a[href="#!"]
-      | Second Link
-  li
-    .divider
-  li
-    a.subheader
-      | Subheader
-  li
-    a.waves-effect[href="#!"]
-      | Third Link With Waves
-a.button-collapse[href="#" data-activates="slide-out"]
-  i.material-icons
-    | menu
-script
-  |  $(".button-collapse").sideNav(); 
+a.waves-effect.waves-light.btn
+  | slim to html
+p
+a.waves-effect.waves-light.btn
+  | puyo
+p  
+  
